--- a/c.html
+++ b/c.html
@@ -17,13 +17,44 @@
     </nav>
   </header>
   <main>
-    <h2>Key Concepts in C</h2>
+    <h2>lý thuyết C++</h2>
     <ul>
-      <li>Procedural Programming</li>
-      <li>Pointers and Memory</li>
-      <li>Control Structures</li>
-      <li>Functions and Modularity</li>
-      <li>Data Structures (arrays, structs)</li>
+      <li>C++ là một ngôn ngữ lập trình bậc trung (middle-level language), kết hợp giữa lập trình thủ tục (procedural programming) và hướng đối tượng (object-oriented programming). Được phát triển bởi Bjarne Stroustrup vào đầu những năm 1980, C++ mở rộng từ ngôn ngữ C và được sử dụng rộng rãi trong phát triển phần mềm hệ thống, game, ứng dụng nhúng, và hiệu năng cao.</li>
+      <li>Kiến thức nền tảng cần nắm trong C++ :</li>
+      <li>Cấu trúc chương trình cơ bản (main, khai báo biến, hàm)
+
+Toán tử và điều kiện (if, switch, for, while)
+
+Con trỏ và tham chiếu
+
+Hàm và truyền tham số
+
+Lập trình hướng đối tượng
+
+Class & Object
+
+Constructor/Destructor
+
+Inheritance (kế thừa)
+
+Polymorphism (đa hình)
+
+Quản lý bộ nhớ: cấp phát và giải phóng (new, delete)
+
+Sử dụng STL: container (vector, list, map...), algorithm (sort, find...)</li>
+      <li>Tính năng nổi bật của C++</li>
+      <li>
+✅Lập trình hướng đối tượng (OOP): Hỗ trợ class, object, kế thừa, đa hình và đóng gói.
+
+✅ Quản lý bộ nhớ thủ công: Sử dụng con trỏ, new, delete.
+
+✅ Thư viện chuẩn STL (Standard Template Library): Bao gồm vector, map, stack, queue, v.v.
+
+✅ Hàm và lớp template: Viết code tổng quát, linh hoạt cho nhiều kiểu dữ liệu.
+
+✅ Hiệu suất cao: Gần với mã máy, thích hợp cho ứng dụng yêu cầu tốc độ.
+
+✅ Đa hình thời gian biên dịch và thời gian chạy.</li>
     </ul>
   </main>
   <footer>
@@ -31,3 +62,4 @@
   </footer>
 </body>
 </html>
+
