--- a/c.html
+++ b/c.html
@@ -21,38 +21,38 @@
     <ul>
       <li>C++ là một ngôn ngữ lập trình bậc trung (middle-level language), kết hợp giữa lập trình thủ tục (procedural programming) và hướng đối tượng (object-oriented programming). Được phát triển bởi Bjarne Stroustrup vào đầu những năm 1980, C++ mở rộng từ ngôn ngữ C và được sử dụng rộng rãi trong phát triển phần mềm hệ thống, game, ứng dụng nhúng, và hiệu năng cao.</li>
       <li>Kiến thức nền tảng cần nắm trong C++ :</li>
-      <li>Cấu trúc chương trình cơ bản (main, khai báo biến, hàm)
+      <li>Cấu trúc chương trình cơ bản (main, khai báo biến, hàm)<br>
 
-Toán tử và điều kiện (if, switch, for, while)
+Toán tử và điều kiện (if, switch, for, while)<br>
 
-Con trỏ và tham chiếu
+Con trỏ và tham chiếu<br>
 
-Hàm và truyền tham số
+Hàm và truyền tham số<br>
 
-Lập trình hướng đối tượng
+Lập trình hướng đối tượng<br>
 
-Class & Object
+Class & Object<br>
 
-Constructor/Destructor
+Constructor/Destructor<br>
 
-Inheritance (kế thừa)
+Inheritance (kế thừa)<br>
 
-Polymorphism (đa hình)
+Polymorphism (đa hình)<br>
 
-Quản lý bộ nhớ: cấp phát và giải phóng (new, delete)
+Quản lý bộ nhớ: cấp phát và giải phóng (new, delete)<br>
 
 Sử dụng STL: container (vector, list, map...), algorithm (sort, find...)</li>
       <li>Tính năng nổi bật của C++</li>
       <li>
-✅Lập trình hướng đối tượng (OOP): Hỗ trợ class, object, kế thừa, đa hình và đóng gói.
+✅Lập trình hướng đối tượng (OOP): Hỗ trợ class, object, kế thừa, đa hình và đóng gói.<br>
 
-✅ Quản lý bộ nhớ thủ công: Sử dụng con trỏ, new, delete.
+✅ Quản lý bộ nhớ thủ công: Sử dụng con trỏ, new, delete.<br>
 
-✅ Thư viện chuẩn STL (Standard Template Library): Bao gồm vector, map, stack, queue, v.v.
+✅ Thư viện chuẩn STL (Standard Template Library): Bao gồm vector, map, stack, queue, v.v.<br>
 
-✅ Hàm và lớp template: Viết code tổng quát, linh hoạt cho nhiều kiểu dữ liệu.
+✅ Hàm và lớp template: Viết code tổng quát, linh hoạt cho nhiều kiểu dữ liệu.<br>
 
-✅ Hiệu suất cao: Gần với mã máy, thích hợp cho ứng dụng yêu cầu tốc độ.
+✅ Hiệu suất cao: Gần với mã máy, thích hợp cho ứng dụng yêu cầu tốc độ.<br>
 
 ✅ Đa hình thời gian biên dịch và thời gian chạy.</li>
     </ul>
@@ -62,4 +62,5 @@ Sử dụng STL: container (vector, list, map...), algorithm (sort, find...)</li
   </footer>
 </body>
 </html>
+
 
