--- a/c.html
+++ b/c.html
@@ -21,40 +21,24 @@
     <ul>
       <li>C++ là một ngôn ngữ lập trình bậc trung (middle-level language), kết hợp giữa lập trình thủ tục (procedural programming) và hướng đối tượng (object-oriented programming). Được phát triển bởi Bjarne Stroustrup vào đầu những năm 1980, C++ mở rộng từ ngôn ngữ C và được sử dụng rộng rãi trong phát triển phần mềm hệ thống, game, ứng dụng nhúng, và hiệu năng cao.</li>
       <li>Kiến thức nền tảng cần nắm trong C++ :</li>
-      <li>Cấu trúc chương trình cơ bản (main, khai báo biến, hàm)<br>
+      <li>Cấu trúc chương trình cơ bản (main, khai báo biến, hàm)</li>
 
-Toán tử và điều kiện (if, switch, for, while)<br>
+<li>Toán tử và điều kiện (if, switch, for, while)</li>
+<li>Con trỏ và tham chiếu</li>
 
-Con trỏ và tham chiếu<br>
+<li>Hàm và truyền tham số</li>
 
-Hàm và truyền tham số<br>
+<li>>Lập trình hướng đối tượng</li>
 
-Lập trình hướng đối tượng<br>
-
-Class & Object<br>
-
-Constructor/Destructor<br>
-
-Inheritance (kế thừa)<br>
-
-Polymorphism (đa hình)<br>
-
-Quản lý bộ nhớ: cấp phát và giải phóng (new, delete)<br>
-
-Sử dụng STL: container (vector, list, map...), algorithm (sort, find...)</li>
+<li>Class & Object</li>
       <li>Tính năng nổi bật của C++</li>
       <li>
-✅Lập trình hướng đối tượng (OOP): Hỗ trợ class, object, kế thừa, đa hình và đóng gói.<br>
+<li>✅Lập trình hướng đối tượng (OOP): Hỗ trợ class, object, kế thừa, đa hình và đóng gói.</li>
 
-✅ Quản lý bộ nhớ thủ công: Sử dụng con trỏ, new, delete.<br>
+<li>✅ Quản lý bộ nhớ thủ công: Sử dụng con trỏ, new, delete.</li>
+<li>✅ Thư viện chuẩn STL (Standard Template Library): Bao gồm vector, map, stack, queue, v.v.</li>
 
-✅ Thư viện chuẩn STL (Standard Template Library): Bao gồm vector, map, stack, queue, v.v.<br>
-
-✅ Hàm và lớp template: Viết code tổng quát, linh hoạt cho nhiều kiểu dữ liệu.<br>
-
-✅ Hiệu suất cao: Gần với mã máy, thích hợp cho ứng dụng yêu cầu tốc độ.<br>
-
-✅ Đa hình thời gian biên dịch và thời gian chạy.</li>
+<li>✅ Hàm và lớp template: Viết code tổng quát, linh hoạt cho nhiều kiểu dữ liệu.</li>
     </ul>
   </main>
   <footer>
@@ -62,5 +46,6 @@ Sử dụng STL: container (vector, list, map...), algorithm (sort, find...)</li
   </footer>
 </body>
 </html>
+
 
 
