--- a/c.html
+++ b/c.html
@@ -20,7 +20,7 @@
     <h2>lý thuyết C++</h2>
     <ul>
       <li>C++ là một ngôn ngữ lập trình bậc trung (middle-level language), kết hợp giữa lập trình thủ tục (procedural programming) và hướng đối tượng (object-oriented programming). Được phát triển bởi Bjarne Stroustrup vào đầu những năm 1980, C++ mở rộng từ ngôn ngữ C và được sử dụng rộng rãi trong phát triển phần mềm hệ thống, game, ứng dụng nhúng, và hiệu năng cao.</li>
-      <li>Kiến thức nền tảng cần nắm trong C++ :</li><br>
+      <li>Kiến thức nền tảng cần nắm trong C++ :</li>
       <li>Cấu trúc chương trình cơ bản (main, khai báo biến, hàm)</li>
 
 <li>Toán tử và điều kiện (if, switch, for, while)</li>
@@ -31,7 +31,7 @@
 <li>>Lập trình hướng đối tượng</li>
 
 <li>Class & Object</li><br>
-      <li>Tính năng nổi bật của C++</li><br>
+      <li>Tính năng nổi bật của C++</li>
       <li>
 <li>✅Lập trình hướng đối tượng (OOP): Hỗ trợ class, object, kế thừa, đa hình và đóng gói.</li>
 
@@ -46,6 +46,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
