--- a/java.html
+++ b/java.html
@@ -17,13 +17,21 @@
     </nav>
   </header>
   <main>
-    <h2>Key Concepts in Java</h2>
+    <h2>Lý thuyết Java</h2>
     <ul>
-      <li>Platform Independence (JVM)</li>
+      <li>Java là một ngôn ngữ lập trình hướng đối tượng phổ biến, được phát triển bởi Sun Microsystems vào năm 1995 (hiện thuộc sở hữu của Oracle). Java nổi bật với khẩu hiệu "Write once, run anywhere" (Viết một lần, chạy mọi nơi), nhờ vào cơ chế Java Virtual Machine (JVM) cho phép chương trình Java chạy được trên nhiều nền tảng khác nhau mà không cần sửa đổi mã nguồn./li>
+      <li>Tính năng:</li>
+      <li>Đa nền tảng (Cross-platform): Nhờ JVM, Java có thể chạy trên Windows, macOS, Linux...</li>
+      <li>Lập trình hướng đối tượng (OOP): Hỗ trợ đầy đủ class, object, kế thừa, trừu tượng, đa hình.</li>
+      <li>Thu gom rác tự động (Garbage Collection): Quản lý bộ nhớ tự động.</li>
       <li>Object-Oriented Programming</li>
-      <li>Exception Handling</li>
-      <li>Multithreading</li>
-      <li>Garbage Collection</li>
+      <lihư viện phong phú: Hỗ trợ đầy đủ cho GUI, mạng, cơ sở dữ liệu, v.v.</li>
+      <li>Kiến thức nền tảng cần nắm trong Java:</li>
+      <li>Cấu trúc chương trình Java cơ bản (main(), import, package)</li>
+      <liKiểu dữ liệu và biến (primitive types, reference types)</li>
+      <li>Câu lệnh điều kiện và vòng lặp</li>
+        <li>Lập trình hướng đối tượng</li>
+        <li>Sử dụng thư viện chuẩn (Java API)</li>
     </ul>
   </main>
   <footer>
@@ -31,3 +39,4 @@
   </footer>
 </body>
 </html>
+
