--- a/cpp.html
+++ b/cpp.html
@@ -17,13 +17,24 @@
     </nav>
   </header>
   <main>
-    <h2>Key Concepts in C++</h2>
+    <h2>lý thuyết C</h2>
     <ul>
-      <li>Object-Oriented Programming (Classes, Inheritance, Polymorphism)</li>
+      <li>Ngôn ngữ lập trình C được phát triển bởi Dennis Ritchie vào đầu những năm 1970 tại Bell Labs. C là một ngôn ngữ lập trình bậc trung, nổi bật với khả năng thao tác gần với phần cứng và hiệu năng cao. Nó được sử dụng rộng rãi trong việc phát triển hệ điều hành, trình biên dịch, hệ thống nhúng và các phần mềm yêu cầu hiệu suất tối đa.</li>
       <li>Memory Management (new/delete, pointers, references)</li>
       <li>STL (Standard Template Library)</li>
-      <li>Templates and Generic Programming</li>
-      <li>Encapsulation and Abstraction</li>
+      <li>Tính năng nổi bật của C:</li>
+      <li>Ngôn ngữ lập trình thủ tục: Mọi chương trình đều tổ chức theo hàm (function).</li>
+      <li>Hiệu năng cao: Biên dịch trực tiếp xuống mã máy.</li>
+      <li>Quản lý bộ nhớ linh hoạt: Hỗ trợ con trỏ và truy cập vùng nhớ trực tiếp.</li>
+      <li>Dễ dàng nhúng: Phù hợp với các hệ thống nhúng hoặc thiết bị phần cứng.</li>
+      <li>Tiêu chuẩn hóa: Được chuẩn hóa với ANSI C (C89), ISO C (C99, C11...)</li>
+      <li>Kiến thức nền tảng cần nắm trong C:</li>
+      <li>Cấu trúc chương trình C (hàm main(), thư viện #include)</li>
+      <li>Khai báo và sử dụng biến, hằng số, kiểu dữ liệu</li>
+      <li>Câu lệnh điều kiện và vòng lặp</li>
+      <li>Hàm và truyền tham số</li>
+      <li>Mảng (Array) và chuỗi (String)</li>
+      <li>Cấu trúc (struct) và kiểu dữ liệu người dùng</li>
     </ul>
   </main>
   <footer>
@@ -31,3 +42,4 @@
   </footer>
 </body>
 </html>
+
