--- a/cpp.html
+++ b/cpp.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>C++ Fundamentals</title>
+  <title>C Fundamentals</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -42,4 +42,5 @@
   </footer>
 </body>
 </html>
+
 
