--- a/c.html
+++ b/c.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>C Fundamentals</title>
+  <title>C++ Fundamentals</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -46,6 +46,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
